--- a/src/main/resources/org/uludag/bmb/fxml/mainScene.fxml
+++ b/src/main/resources/org/uludag/bmb/fxml/mainScene.fxml
@@ -36,6 +36,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Tab?>
@@ -50,7 +51,7 @@
 
 <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="800.0" minWidth="1300.0" prefHeight="800.0" prefWidth="1300.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
   <children>
-    <SplitPane cacheShape="false" centerShape="false" dividerPositions="0.2505567928730512, 0.7505567928730512" focusTraversable="false" maxWidth="1.7976931348623157E308" nodeOrientation="LEFT_TO_RIGHT" style="-fx-background-color: white;" VBox.vgrow="ALWAYS">
+    <SplitPane cacheShape="false" centerShape="false" dividerPositions="0.2505567928730512, 0.5" focusTraversable="false" maxWidth="1.7976931348623157E308" nodeOrientation="LEFT_TO_RIGHT" style="-fx-background-color: white;" VBox.vgrow="ALWAYS">
       <items>
         <AnchorPane maxWidth="250.0" minWidth="200.0" prefWidth="250.0" style="-fx-background-color: #f7f5f2;" SplitPane.resizableWithParent="false">
           <children>
@@ -62,7 +63,7 @@
                   <TreeView fx:id="treeView" layoutX="10.0" layoutY="58.0" onMouseClicked="#hierarchySelectFolder" prefHeight="299.0" prefWidth="230.0" style="-fx-background-color: #fbfaf9;" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="58.0" />
           </children>
         </AnchorPane>
-      <AnchorPane id="Content" fx:id="middlePane" maxWidth="1.7976931348623157E308" minHeight="-1.0" minWidth="400.0" style="-fx-background-color: white;">
+      <AnchorPane id="Content" fx:id="middlePane" maxWidth="1.7976931348623157E308" minHeight="-1.0" minWidth="400.0" prefWidth="794.0" style="-fx-background-color: white;">
         <children>
                   <Button id="upload" fx:id="btnUpload" layoutX="8.0" layoutY="59.0" mnemonicParsing="false" onAction="#uploadItem" prefHeight="25.0" prefWidth="106.0" styleClass="btnMainMenu" text="UPLOAD" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS" AnchorPane.leftAnchor="9.0" AnchorPane.topAnchor="59.0" />
                   <Button id="download" fx:id="btnDownload" layoutX="130.0" layoutY="59.0" mnemonicParsing="false" onAction="#downloadItem" prefHeight="25.0" prefWidth="95.0" styleClass="btnMainMenu" text=" Download" textFill="WHITE" AnchorPane.leftAnchor="130.0" AnchorPane.topAnchor="59.0" />
@@ -77,7 +78,6 @@
                                           <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                                        </columnResizePolicy>
                                        <columns>
-                                          <TableColumn fx:id="ctwCheckBox" prefWidth="37.0" resizable="false" text="Seçim" />
                                           <TableColumn fx:id="ctwFileName" prefWidth="187.0" text="Dosya" />
                                           <TableColumn fx:id="ctwLastEdit" prefWidth="161.0" text="Son Değişiklik" />
                                           <TableColumn fx:id="ctwSyncStatus" prefWidth="209.0" text="Senkronizasyon Durumu" />
@@ -112,8 +112,27 @@
       </AnchorPane>
         <AnchorPane cache="true" maxWidth="250.0" minWidth="200.0" prefWidth="250.0">
           <children>
-            <Label alignment="CENTER" font="$x1" layoutX="14.0" layoutY="14.0" prefHeight="21.0" prefWidth="152.0" style="&#10;" text="Dosya Detayları" textAlignment="CENTER" wrapText="false" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="34.0" AnchorPane.topAnchor="14.0" />
-                  <Pane layoutX="-1.0" layoutY="733.0" prefHeight="65.0" prefWidth="250.0" style="-fx-background-color: aqua;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="733.0" />
+                  <Pane prefHeight="35.0" prefWidth="250.0" style="-fx-border-color: transparent transparent black transparent; -fx-border-width: 2;" AnchorPane.rightAnchor="0.0">
+                     <children>
+                        <Button fx:id="btnNotificationn" layoutX="215.0" layoutY="4.0" mnemonicParsing="false" onMouseClicked="#showNotifications" styleClass="icon-button" text="Button" />
+                     </children>
+                  </Pane>
+                  <Pane fx:id="fileDetailPane" layoutY="34.0" prefHeight="764.0" prefWidth="250.0">
+                     <children>
+                  <Label alignment="CENTER" font="$x1" layoutX="49.0" layoutY="14.0" prefHeight="21.0" prefWidth="152.0" style="&#10;" text="Dosya Detayları" textAlignment="CENTER" wrapText="false" />
+                     </children>
+                  </Pane>
+                  <Pane fx:id="notificationPane" layoutY="35.0" prefHeight="323.0" prefWidth="360.0">
+                     <children>
+                        <ListView fx:id="notificationList" layoutY="38.0" prefHeight="291.0" prefWidth="250.0" />
+                        <Label layoutX="79.0" layoutY="14.0" text="Bildirimler">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                        <Button fx:id="btnClearNotifications" layoutX="178.0" layoutY="15.0" maxHeight="24.0" mnemonicParsing="false" onMouseClicked="#clearNotifications" prefHeight="24.0" prefWidth="24.0" styleClass="btnClearNotification" />
+                     </children>
+                  </Pane>
           </children>
         </AnchorPane>
       </items>
