--- a/src/main/resources/org/uludag/bmb/fxml/mainScene.fxml
+++ b/src/main/resources/org/uludag/bmb/fxml/mainScene.fxml
@@ -47,6 +47,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
 <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="800.0" minWidth="1300.0" prefHeight="800.0" prefWidth="1300.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
@@ -116,6 +117,7 @@
                   <Pane prefHeight="35.0" prefWidth="250.0" style="-fx-border-color: transparent transparent black transparent; -fx-border-width: 2;" AnchorPane.rightAnchor="0.0">
                      <children>
                         <Button fx:id="btnNotificationn" layoutX="215.0" layoutY="4.0" mnemonicParsing="false" onMouseClicked="#showNotifications" styleClass="icon-button" text="Button" />
+                        <Circle fx:id="notificationDot" disable="true" fill="#ff1f1f" layoutX="220.0" layoutY="22.0" radius="8.0" stroke="BLACK" strokeType="INSIDE" visible="false" />
                      </children>
                   </Pane>
                   <Pane fx:id="fileDetailPane" layoutY="34.0" prefHeight="764.0" prefWidth="250.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
