--- a/src/main/resources/org/uludag/bmb/css/mainscene.css
+++ b/src/main/resources/org/uludag/bmb/css/mainscene.css
@@ -7,6 +7,10 @@
     -fx-opacity: 0;
 }
 
+.newFolder {
+    -fx-shape: "M 17.75 19 h -12 a 2.25 2.25 0 0 1 -2.25 -2.25 V 5 h 4.573 a 2.238 2.238 0 0 1 2.012 1.244 l 0.378 0.756 H 20 v 9.75 A 2.25 2.25 0 0 1 17.75 19 Z M 5 6.5 v 10.25 a 0.75 0.75 0 0 0 0.75 0.75 h 12 a 0.75 0.75 0 0 0 0.75 -0.75 V 8.5 H 9.537 l -0.793 -1.585 a 0.745 0.745 0 0 0 -0.671 -0.415 H 5 Z M9 13.75v-1.5h2v-2h1.5v2h2v1.5h-2v2H11v-2H9Z";
+}
+
 .tree-cell > .tree-disclosure-node > .arrow {
     -fx-min-width: 11;
     -fx-pref-width: 11;
