--- a/src/main/resources/org/uludag/bmb/fxml/mainScene.fxml
+++ b/src/main/resources/org/uludag/bmb/fxml/mainScene.fxml
@@ -39,8 +39,6 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TreeView?>
@@ -68,45 +66,28 @@
         <children>
                   <Button id="upload" fx:id="btnUpload" layoutX="8.0" layoutY="59.0" mnemonicParsing="false" onAction="#uploadItem" prefHeight="25.0" prefWidth="106.0" styleClass="btnMainMenu" text="UPLOAD" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS" AnchorPane.leftAnchor="9.0" AnchorPane.topAnchor="59.0" />
                   <Button id="download" fx:id="btnDownload" layoutX="130.0" layoutY="59.0" mnemonicParsing="false" onAction="#downloadItem" prefHeight="25.0" prefWidth="95.0" styleClass="btnMainMenu" text=" Download" textFill="WHITE" AnchorPane.leftAnchor="130.0" AnchorPane.topAnchor="59.0" />
-                  <TabPane fx:id="tabPane" layoutX="8.0" layoutY="56.0" maxWidth="1.7976931348623157E308" prefHeight="623.0" prefWidth="792.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="3.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="90.0">
-                    <tabs>
-                      <Tab id="tab1" closable="false" text="Online Dosyalar">
-                        <content>
-                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" styleClass="tabPane">
-                                 <children>
-                                    <TableView fx:id="cloudTableView" layoutX="39.0" layoutY="26.0" prefHeight="592.0" prefWidth="762.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                       <columnResizePolicy>
-                                          <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                                       </columnResizePolicy>
-                                       <columns>
-                                          <TableColumn fx:id="ctwFileName" prefWidth="187.0" text="Dosya" />
-                                          <TableColumn fx:id="ctwLastEdit" prefWidth="161.0" text="Son Değişiklik" />
-                                          <TableColumn fx:id="ctwSyncStatus" prefWidth="209.0" text="Senkronizasyon Durumu" />
-                                          <TableColumn fx:id="ctwFilePath" prefWidth="75.0" text="PATHINFO" visible="false" />
-                                       </columns>
-                                       <contextMenu>
-                                          <ContextMenu>
-                                            <items>
-                                                <MenuItem fx:id="ctwMenuShare" mnemonicParsing="false" onAction="#shareFile" text="Paylaş" />
-                                                <MenuItem fx:id="ctwMenuDownload" mnemonicParsing="false" onAction="#downloadItem" text="İndir" />
-                                                <MenuItem fx:id="ctwMenuDelete" mnemonicParsing="false" onAction="#deleteFile" text="Sil" />
-                                            </items>
-                                          </ContextMenu>
-                                       </contextMenu>
-                                    </TableView>
-                                 </children>
-                              </AnchorPane>
-                        </content>
-                      </Tab>
-                      <Tab id="tab2" closable="false" text="Yerel Dosyalar">
-                        <content>
-                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" styleClass="tabPane" />
-                        </content>
-                      </Tab>
-                    </tabs>
-                  </TabPane>
+                  <TableView fx:id="cloudTableView" layoutX="10.0" layoutY="103.0" prefHeight="695.0" prefWidth="784.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="103.0">
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
+                     <columns>
+                        <TableColumn fx:id="ctwFileName" prefWidth="187.0" text="Dosya" />
+                        <TableColumn fx:id="ctwLastEdit" prefWidth="161.0" text="Son Değişiklik" />
+                        <TableColumn fx:id="ctwSyncStatus" prefWidth="209.0" text="Senkronizasyon Durumu" />
+                        <TableColumn fx:id="ctwFilePath" prefWidth="75.0" text="PATHINFO" visible="false" />
+                     </columns>
+                     <contextMenu>
+                        <ContextMenu>
+                          <items>
+                              <MenuItem fx:id="ctwMenuShare" mnemonicParsing="false" onAction="#shareFile" text="Paylaş" />
+                              <MenuItem fx:id="ctwMenuDownload" mnemonicParsing="false" onAction="#downloadItem" text="İndir" />
+                              <MenuItem fx:id="ctwMenuDelete" mnemonicParsing="false" onAction="#deleteFile" text="Sil" />
+                          </items>
+                        </ContextMenu>
+                     </contextMenu>
+                  </TableView>
                   <SplitPane fx:id="linkPane" layoutX="16.0" layoutY="14.0" maxWidth="1.7976931348623157E308" prefHeight="35.0" prefWidth="744.0" styleClass="pathLinkPane" />
-                  <Button fx:id="btnNewFolder" layoutX="238.0" layoutY="60.0" mnemonicParsing="false" text="Yeni Klasör" />
+                  <Button fx:id="btnNewFolder" layoutX="238.0" layoutY="60.0" mnemonicParsing="false" onMouseClicked="#createNewFolder" prefHeight="24.0" prefWidth="31.0" style="-fx-background-color: black;" styleClass="newFolder" />
         </children>
                <padding>
                   <Insets left="5.0" right="5.0" />
