--- a/src/main/resources/org/uludag/bmb/fxml/mainScene.fxml
+++ b/src/main/resources/org/uludag/bmb/fxml/mainScene.fxml
@@ -75,6 +75,7 @@
                         <TableColumn fx:id="ctwLastEdit" minWidth="-1.0" prefWidth="272.0" styleClass="ctwSync" text="Son Değişiklik" />
                         <TableColumn fx:id="ctwCheckBox" editable="false" minWidth="-1.0" prefWidth="304.0" styleClass="ctwSync" text="Senkronizasyon" />
                         <TableColumn fx:id="ctwFilePath" prefWidth="75.0" text="PATHINFO" visible="false" />
+                        <TableColumn fx:id="ctwChange" editable="false" minWidth="-1.0" prefWidth="304.0" styleClass="ctwChange" text="Değişiklik Durumu" />
                      </columns>
                      <contextMenu>
                         <ContextMenu>
