--- a/src/main/resources/org/uludag/bmb/css/mainscene.css
+++ b/src/main/resources/org/uludag/bmb/css/mainscene.css
@@ -33,6 +33,39 @@
     -fx-background-color: red;
 }
 
+/* .ctwDownload .check-box:selected .box {
+    
+} */
+
+.ctwDownload .check-box > .box {
+    -fx-background-insets: 0;
+    -fx-background-radius: 0;
+    -fx-background-color: transparent;
+    -fx-border-color:transparent;
+
+}
+
+.ctwDownload .check-box:selected > .box > .mark {
+    -fx-background-color: rgb(0, 110, 15);
+    -fx-shape: "M20.285 2l-11.285 11.567-5.286-5.011-3.714 3.716 9 8.728 15-15.285z";
+}
+
+.ctwDownload {
+    -fx-table-cell-border-color: transparent;
+}
+
+.table-view .arrow {
+    -fx-background-insets: 0;
+    -fx-padding: 0;
+    -fx-shape: " ";
+}
+
+.ctwDownload.column-header {
+    -fx-background-image: url("../icons/download.png");
+    -fx-background-position: center center;
+    -fx-background-size: 50;
+}
+
 .ctwSync {
     -fx-opacity: 1;
     -fx-alignment: CENTER;
@@ -42,7 +75,6 @@
     -fx-opacity: 1;
     -fx-alignment: CENTER;
 }
-
 
 .tree-cell > .tree-disclosure-node > .arrow {
     -fx-min-width: 11;
