--- a/src/main/resources/org/uludag/bmb/fxml/mainScene.fxml
+++ b/src/main/resources/org/uludag/bmb/fxml/mainScene.fxml
@@ -41,6 +41,7 @@
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.control.TreeView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
@@ -60,13 +61,27 @@
               </font>
             </Label>
                   <TreeView fx:id="treeView" layoutX="10.0" layoutY="58.0" onMouseClicked="#hierarchySelectFolder" prefHeight="299.0" prefWidth="230.0" style="-fx-background-color: #fbfaf9;" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="58.0" />
+                  <ListView fx:id="sharedFilesList" layoutX="10.0" layoutY="422.0" prefHeight="353.0" prefWidth="230.0">
+                     <contextMenu>
+                        <ContextMenu>
+                          <items>
+                            <MenuItem mnemonicParsing="false" text="Kaydet" />
+                          </items>
+                        </ContextMenu>
+                     </contextMenu>
+                  </ListView>
+                  <Label layoutX="49.0" layoutY="386.0" prefHeight="27.0" prefWidth="152.0" text="Paylaşılan Dosyalar">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
           </children>
         </AnchorPane>
       <AnchorPane id="Content" fx:id="middlePane" maxWidth="1.7976931348623157E308" minHeight="-1.0" minWidth="400.0" prefWidth="794.0" style="-fx-background-color: white;">
         <children>
                   <Button id="upload" fx:id="btnUpload" layoutX="8.0" layoutY="59.0" mnemonicParsing="false" onAction="#uploadItem" prefHeight="25.0" prefWidth="106.0" styleClass="btnMainMenu" text="UPLOAD" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS" AnchorPane.leftAnchor="9.0" AnchorPane.topAnchor="59.0" />
                   <Button id="download" fx:id="btnDownload" layoutX="130.0" layoutY="59.0" mnemonicParsing="false" onAction="#downloadItem" prefHeight="25.0" prefWidth="95.0" styleClass="btnMainMenu" text=" Download" textFill="WHITE" AnchorPane.leftAnchor="130.0" AnchorPane.topAnchor="59.0" />
-                  <TableView fx:id="cloudTableView" layoutX="10.0" layoutY="103.0" prefHeight="695.0" prefWidth="784.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="103.0">
+                  <TableView fx:id="cloudTableView" layoutX="10.0" layoutY="103.0" onMouseClicked="#showFileDetails" prefHeight="695.0" prefWidth="784.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="103.0">
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                      </columnResizePolicy>
@@ -109,6 +124,30 @@
                   <Pane fx:id="fileDetailPane" layoutY="34.0" prefHeight="764.0" prefWidth="250.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                      <children>
                   <Label alignment="CENTER" font="$x1" layoutX="49.0" layoutY="14.0" prefHeight="21.0" prefWidth="152.0" style="&#10;" text="Dosya Detayları" textAlignment="CENTER" wrapText="false" />
+                        <Label layoutX="14.0" layoutY="346.0" prefHeight="17.0" prefWidth="64.0" text="Dosya Adı" />
+                        <Label layoutX="14.0" layoutY="373.0" prefHeight="17.0" prefWidth="64.0" text="Boyut" />
+                        <Label layoutX="14.0" layoutY="401.0" prefHeight="17.0" prefWidth="80.0" text="Son Değişiklik" />
+                        <Label fx:id="lblFileName" layoutX="125.0" layoutY="346.0" prefHeight="17.0" prefWidth="112.0" text="Dosya Adı">
+                           <tooltip>
+                              <Tooltip fx:id="fileNameTTip" text="Dosya Adı" />
+                           </tooltip>
+                        </Label>
+                        <Label fx:id="lblFileSize" layoutX="125.0" layoutY="373.0" prefHeight="17.0" prefWidth="112.0" text="Dosya Adı">
+                           <tooltip>
+                              <Tooltip fx:id="fileSizeTTip" text="Dosya Boyutu" />
+                           </tooltip>
+                        </Label>
+                        <Label fx:id="lblLastEdit" layoutX="125.0" layoutY="401.0" prefHeight="17.0" prefWidth="112.0" text="Dosya Adı">
+                           <tooltip>
+                              <Tooltip fx:id="lastChangeTTip" text="Son Değişiklik" />
+                           </tooltip>
+                        </Label>
+                        <ListView fx:id="shareList" layoutX="25.0" layoutY="456.0" prefHeight="200.0" prefWidth="200.0" />
+                        <Label layoutX="38.0" layoutY="429.0" prefHeight="27.0" prefWidth="175.0" text="Paylaşılan Hesaplar">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
                      </children>
                   </Pane>
                   <Pane fx:id="notificationPane" layoutY="35.0" prefHeight="323.0" prefWidth="360.0">
