--- a/src/main/resources/org/uludag/bmb/fxml/selectShareFolderScene.fxml
+++ b/src/main/resources/org/uludag/bmb/fxml/selectShareFolderScene.fxml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TreeView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="selectShareFolderSceneController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1%22%3E">
    <children>
       <AnchorPane prefHeight="401.0" prefWidth="600.0">
          <children>
-            <TreeView fx:id="selectShareFolderTreeView" layoutX="181.0" layoutY="14.0" prefHeight="253.0" prefWidth="276.0" />
-            <Button fx:id="saveSharedToFolderBtn" layoutX="248.0" layoutY="295.0" mnemonicParsing="false" onAction="#saveSharedToFolder" prefHeight="25.0" prefWidth="139.0" text="Button" />
+            <TreeView fx:id="selectShareFolderTreeView" layoutX="181.0" layoutY="14.0" onMouseClicked="#getCloudPath" prefHeight="253.0" prefWidth="276.0" />
+            <Button fx:id="saveSharedToFolderBtn" layoutX="238.0" layoutY="339.0" mnemonicParsing="false" onAction="#saveSharedToFolder" prefHeight="25.0" prefWidth="139.0" text="Button" />
+            <TextField fx:id="cloudPathTXT" layoutX="181.0" layoutY="288.0" prefHeight="25.0" prefWidth="276.0" promptText="Kaydetmek Istediğiniz klasörü seçiniz" />
          </children>
       </AnchorPane>
    </children>
