--- a/src/main/resources/org/uludag/bmb/fxml/shareScene.fxml
+++ b/src/main/resources/org/uludag/bmb/fxml/shareScene.fxml
@@ -76,6 +76,7 @@
                </font>
             </Label>
             <ComboBox fx:id="accountField" layoutX="551.0" layoutY="349.0" prefHeight="24.0" prefWidth="332.0" />
+            <Label fx:id="pathIfo" layoutX="80.0" layoutY="43.0" text="Label" visible="false" />
       </children>
     </AnchorPane>
   </children>
