--- a/src/main/resources/org/uludag/bmb/fxml/mainScene.fxml
+++ b/src/main/resources/org/uludag/bmb/fxml/mainScene.fxml
@@ -108,7 +108,7 @@
                         </ContextMenu>
                      </contextMenu>
                   </TableView>
-                  <SplitPane fx:id="linkPane" layoutX="16.0" layoutY="14.0" maxWidth="1.7976931348623157E308" prefHeight="35.0" prefWidth="744.0" styleClass="pathLinkPane" />
+                  <SplitPane fx:id="pathBar" layoutX="16.0" layoutY="14.0" maxWidth="1.7976931348623157E308" prefHeight="35.0" prefWidth="744.0" styleClass="pathLinkPane" />
                   <Button fx:id="btnNewFolder" layoutX="238.0" layoutY="60.0" mnemonicParsing="false" onMouseClicked="#createNewFolder" prefHeight="24.0" prefWidth="31.0" style="-fx-background-color: black;" styleClass="newFolder" />
         </children>
                <padding>
