--- a/src/main/resources/org/uludag/bmb/css/mainscene.css
+++ b/src/main/resources/org/uludag/bmb/css/mainscene.css
@@ -28,20 +28,6 @@
     -fx-background-color: white;
 }
 
-.ctwSync .check-box:selected .box {
-    -fx-opacity: 1;
-    -fx-background-color: #002fff;
-}
-
-.ctwChange .check-box:selected .box {
-    -fx-opacity: 1;
-    -fx-background-color: red;
-}
-
-/* .ctwDownload .check-box:selected .box {
-    
-} */
-
 .ctwDownload .check-box > .box {
     -fx-background-insets: 0;
     -fx-background-radius: 0;
@@ -58,6 +44,24 @@
     -fx-table-cell-border-color: transparent;
 }
 
+
+.ctwSync .check-box > .box {
+    -fx-background-insets: 0;
+    -fx-background-radius: 0;
+    -fx-background-color: transparent;
+    -fx-border-color: transparent;
+}
+
+.ctwSync .check-box:selected > .box > .mark {
+    -fx-background-color: rgb(15, 178, 206);
+    -fx-shape: "M20.285 2l-11.285 11.567-5.286-5.011-3.714 3.716 9 8.728 15-15.285z";
+}
+
+.ctwSync {
+    -fx-opacity: 1;
+    -fx-alignment: CENTER;
+}
+
 .table-view .arrow {
     -fx-background-insets: 0;
     -fx-padding: 0;
@@ -71,9 +75,16 @@
     -fx-background-size: 50;
 }
 
-.ctwSync {
-    -fx-opacity: 1;
-    -fx-alignment: CENTER;
+.ctwChange .check-box > .box {
+    -fx-background-insets: 0;
+    -fx-background-radius: 0;
+    -fx-background-color: transparent;
+    -fx-border-color: transparent;
+}
+
+.ctwChange .check-box:selected > .box > .mark {
+    -fx-background-color: rgb(196, 7, 7);
+    -fx-shape: "M20.285 2l-11.285 11.567-5.286-5.011-3.714 3.716 9 8.728 15-15.285z";
 }
 
 .ctwChange {
@@ -217,4 +228,24 @@
 .tree-cell:pressed {
     -fx-background-color: #0093ff;
     -fx-text-fill: white;
+}
+
+.iconMedia{
+    -fx-background-color: black;
+    -fx-shape: "M 403 -1162 c -215 64 -394 119 -397 122 c -5 6 218 807 227 816 c 10 10 808 -228 804 -240 c -2 -6 -55 -192 -117 -414 c -63 -221 -116 -402 -119 -401 c -3 0 -182 53 -398 117 z m 411 195 c 33 116 61 221 64 232 c 4 14 -10 6 -47 -28 c -49 -46 -71 -53 -71 -21 c 0 8 -13 19 -28 25 c -23 8 -32 21 -46 67 c -10 31 -25 68 -33 81 c -12 19 -13 23 -2 19 c 8 -3 65 -20 127 -38 c 95 -28 115 -31 123 -19 c 18 28 8 39 -58 58 c -38 11 -183 54 -323 95 c -140 42 -258 72 -261 68 c -4 -4 -9 -16 -11 -26 c -3 -17 19 -26 172 -71 c 163 -48 176 -53 198 -85 c 12 -18 27 -51 34 -72 l 11 -39 l -89 -90 c -49 -49 -94 -89 -101 -89 c -8 0 -21 16 -30 35 c -13 26 -27 38 -55 47 c -40 12 -38 9 -72 128 c -20 70 -82 181 -90 160 c -3 -8 -33 -114 -67 -235 c -49 -173 -59 -220 -48 -224 c 27 -10 624 -189 634 -190 c 6 0 37 95 69 212 z M 200 -950 c -43 43 -14 110 48 110 c 56 0 82 -70 42 -110 c -11 -11 -31 -20 -45 -20 c -14 0 -34 9 -45 20 z M 932 -1032 c 10 39 11 40 64 47 l 54 6 l 0 47 c -1 26 -5 94 -10 152 c -8 101 -7 109 23 215 c 23 79 33 102 35 80 c 18 -212 39 -561 34 -566 c -4 -4 -53 -10 -109 -14 l -101 -6 l 10 39 z M 1163 -668 c -5 79 -9 144 -8 146 c 1 1 30 -51 63 -116 l 62 -119 l -49 -27 c -27 -14 -51 -26 -53 -26 c -3 0 -9 64 -15 142 z M 798 -327 c -152 45 -275 83 -274 85 c 3 3 495 42 532 42 c 19 0 22 -8 30 -105 c 6 -69 6 -105 -1 -104 c -5 0 -135 37 -287 82 z M 640 -132 c 47 26 120 66 162 89 l 77 41 l 14 -21 c 8 -12 26 -45 40 -74 l 27 -52 l -43 -5 c -55 -7 -302 -26 -336 -26 c -20 0 -6 11 59 48 z";
+}
+
+.iconPdf {
+    -fx-background-color: black;
+    -fx-shape: "M 200 -1260 c -19 19 -20 33 -20 319 l 0 298 l -42 6 c -75 10 -78 19 -78 259 c 0 208 0 209 25 233 l 24 25 l 336 0 c 322 0 336 -1 355 -20 c 18 -18 20 -33 20 -178 c 0 -121 -3 -163 -14 -178 c -14 -18 -32 -19 -352 -24 c -307 -5 -338 -7 -348 -23 c -16 -25 4 -51 41 -55 c 24 -2 32 1 36 19 c 3 12 12 19 19 17 c 10 -4 14 -74 16 -341 l 2 -337 l 370 0 l 370 0 l 0 94 c 0 124 2 126 126 126 l 94 0 l 0 490 l 0 490 l -479 0 c -478 0 -479 0 -484 -21 c -3 -12 -12 -19 -19 -17 c -21 7 -21 35 1 57 c 21 21 30 21 501 21 c 467 0 481 -1 500 -20 c 19 -19 20 -33 20 -533 l 0 -512 l -108 -108 l -107 -107 l -393 0 c -379 0 -393 1 -412 20 z m 890 115 l 85 85 l -88 0 l -87 0 l 0 -85 c 0 -47 1 -85 3 -85 c 1 0 40 38 87 85 z m -312 827 l 3 158 l -329 0 c -242 0 -331 -3 -340 -12 c -8 -8 -12 -59 -12 -163 l 0 -150 l 337 5 l 338 5 l 3 157 z M 224 -407 c -3 8 -4 52 -2 98 c 2 67 6 84 18 84 c 10 0 16 -12 18 -33 c 3 -26 8 -32 26 -32 c 26 0 66 -38 66 -64 c 0 -30 -46 -66 -85 -66 c -20 0 -38 6 -41 13 z m 81 52 c 0 13 -8 21 -22 23 c -19 3 -23 -1 -23 -23 c 0 -22 4 -26 23 -23 c 14 2 22 10 22 23 z M 395 -408 c -3 8 -5 53 -3 99 l 3 84 l 38 3 c 81 7 129 -99 74 -163 c -27 -32 -103 -47 -112 -23 z m 93 60 c 17 36 -2 81 -36 86 c -21 3 -22 0 -22 -58 c 0 -58 1 -61 22 -58 c 13 2 29 15 36 30 z M 574 -407 c -3 8 -4 52 -2 98 c 2 67 6 84 18 84 c 10 0 16 -12 18 -37 c 3 -32 7 -37 30 -40 c 36 -4 36 -32 0 -36 c -20 -2 -28 -9 -28 -23 c 0 -14 7 -19 30 -19 c 23 0 30 -4 30 -20 c 0 -17 -7 -20 -45 -20 c -29 0 -48 5 -51 13 z M 629 -1046 c -9 20 -8 35 6 73 c 24 67 23 90 -14 170 c -29 63 -37 72 -71 82 c -43 13 -100 61 -100 85 c 0 25 36 55 59 49 c 19 -5 64 -51 101 -102 c 11 -16 36 -25 94 -36 l 79 -15 l 33 25 c 52 40 83 48 110 30 c 15 -9 24 -25 24 -41 c 0 -30 -48 -54 -108 -54 c -41 0 -66 -20 -114 -92 c -23 -35 -24 -41 -14 -98 c 12 -73 3 -94 -42 -98 c -26 -3 -34 2 -43 22 z m 50 43 c 0 34 -1 36 -11 16 c -6 -12 -8 -29 -5 -37 c 11 -27 17 -18 16 21 z m 23 240 c -31 6 -58 11 -58 10 c -1 -1 8 -26 20 -55 l 21 -53 l 37 43 l 37 43 l -57 12 z m 203 34 c 12 19 -2 21 -32 5 l -28 -15 l 27 -1 c 15 0 30 5 33 11 z m -375 84 c -27 28 -40 32 -40 10 c 0 -14 51 -48 59 -39 c 3 2 -6 15 -19 29 z";
+}
+
+.iconText {
+    -fx-background-color: black;
+    -fx-shape: "M 347 -1204 c -13 13 -7 52 9 58 c 9 3 135 6 280 6 c 292 0 303 2 346 62 c 23 33 23 34 28 423 l 5 390 l 24 3 c 13 2 28 -2 32 -10 c 5 -7 9 -180 8 -383 c 0 -397 -2 -412 -52 -479 c -52 -67 -69 -71 -387 -74 c -157 -2 -289 0 -293 4 z M 231 -1054 l -31 26 l 0 427 c 0 420 0 428 21 450 c 11 12 32 26 46 32 c 13 5 153 9 311 9 c 267 0 289 -1 319 -20 c 17 -10 37 -28 43 -39 c 7 -15 10 -151 8 -442 l -3 -421 l -28 -24 l -28 -24 l -314 0 l -313 0 l -31 26 z m 630 44 c 18 10 19 25 19 408 c 0 296 -3 401 -12 410 c -9 9 -88 12 -294 12 c -244 0 -285 -2 -298 -16 c -14 -13 -16 -64 -16 -401 c 0 -346 2 -388 17 -405 c 15 -17 37 -18 290 -18 c 170 0 282 4 294 10 z M 343 -855 c -3 9 -1 21 4 26 c 5 5 101 8 234 7 c 216 -3 224 -4 224 -23 c 0 -19 -8 -20 -228 -23 c -200 -2 -228 0 -234 13 z M 343 -755 c -3 9 -1 21 4 26 c 5 5 101 8 234 7 c 216 -3 224 -4 224 -23 c 0 -19 -8 -20 -228 -23 c -200 -2 -228 0 -234 13 z M 342 -648 c 3 23 3 23 223 25 c 121 2 226 -1 234 -6 c 8 -5 11 -16 8 -25 c -6 -14 -35 -16 -237 -16 l -231 0 l 3 22 z M 340 -550 c 0 20 5 20 232 18 c 212 -3 233 -5 236 -21 c 3 -16 -13 -17 -232 -17 c -230 0 -236 1 -236 20 z M 347 -473 c -4 3 -7 15 -7 25 c 0 17 14 18 230 18 c 202 0 231 -2 237 -16 c 3 -9 0 -20 -8 -25 c -16 -10 -442 -12 -452 -2 z M 347 -374 c -4 4 -7 16 -7 26 c 0 17 12 18 233 16 c 224 -3 232 -4 232 -23 c 0 -19 -8 -20 -226 -23 c -124 -1 -228 1 -232 4 z";
+}
+
+.iconDefault {
+    -fx-background-color: black;
+    -fx-shape: "M 494 -1260 c -209 55 -337 182 -366 363 c -10 64 -9 89 6 162 c 52 266 279 620 458 714 l 46 25 l 44 -19 c 61 -28 191 -162 266 -275 c 78 -117 166 -295 187 -374 c 40 -157 25 -286 -45 -394 c -111 -172 -372 -261 -596 -202 z m 311 64 c 294 94 374 345 212 676 c -93 191 -288 437 -361 456 c -77 19 -270 -205 -386 -448 c -94 -196 -114 -358 -59 -473 c 46 -98 159 -185 286 -220 c 82 -23 221 -19 308 9 z M 280 -693 c 0 46 54 146 99 184 c 47 41 98 59 164 59 l 47 0 l -7 -33 c -25 -138 -138 -237 -270 -237 c -29 0 -33 3 -33 27 z M 870 -700 c -94 32 -160 125 -160 226 c 0 26 1 26 48 19 c 132 -19 235 -110 257 -228 l 7 -37 l -48 0 c -27 1 -74 9 -104 20 z";
 }
